set(SOURCE_FILES
        src/include/euclid/alloc.h
        src/include/euclid/AttributesEuclid.hh
        src/include/euclid/boundary.h
        src/include/euclid/Box.hh
        src/include/euclid/CenteredRectangularTemplate.hh
        src/include/euclid/CircularTemplate.hh
        src/include/euclid/CircularTemplateList.hh
        src/include/euclid/clump.h
        src/include/euclid/ConvexHull.hh
        src/include/euclid/copyright.h
        src/include/euclid/DataAtt.hh
        src/include/euclid/distance.h
        src/include/euclid/DistPoint.hh
        src/include/euclid/DPbasic.hh
        src/include/euclid/EllipticalTemplate.hh
        src/include/euclid/EndPts.hh
        src/include/euclid/euclid_macros.h
        src/include/euclid/FuzzyFcn.hh
        src/include/euclid/geometry.h
        src/include/euclid/GlobalCircularTemplate.hh
        src/include/euclid/GlobalGridTemplate.hh
        src/include/euclid/Grid.hh
        src/include/euclid/Grid2d.hh
        src/include/euclid/Grid2dClump.hh
        src/include/euclid/Grid2dDistToNonMissing.hh
        src/include/euclid/Grid2dEdgeBuilder.hh
        src/include/euclid/Grid2dInside.hh
        src/include/euclid/Grid2dLoop.hh
        src/include/euclid/Grid2dLoopA.hh
        src/include/euclid/Grid2dLoopAlg.hh
        src/include/euclid/Grid2dMedian.hh
        src/include/euclid/Grid2dOffset.hh
        src/include/euclid/Grid2dPolyFinder.hh
        src/include/euclid/GridAlgs.hh
        src/include/euclid/GridExpand.hh
        src/include/euclid/GridExpandX.hh
        src/include/euclid/GridGeom.hh
        src/include/euclid/GridOffset.hh
        src/include/euclid/GridPoint.hh
        src/include/euclid/GridTemplate.hh
        src/include/euclid/GridTemplateList.hh
        src/include/euclid/Handedness.hh
        src/include/euclid/IndexPoint.hh
        src/include/euclid/Line.hh
        src/include/euclid/LineList.hh
        src/include/euclid/link.h
        src/include/euclid/MotionVector.hh
        src/include/euclid/node.h
        src/include/euclid/Pjg.hh
        src/include/euclid/PjgAlbersMath.hh
        src/include/euclid/PjgAzimEquidistMath.hh
        src/include/euclid/PjgCalc.hh
        src/include/euclid/PjgFlatCalc.hh
        src/include/euclid/PjgGrib.hh
        src/include/euclid/PjgLambertAzimMath.hh
        src/include/euclid/PjgLambertConfMath.hh
        src/include/euclid/PjgLatlonCalc.hh
        src/include/euclid/PjgLatlonMath.hh
        src/include/euclid/PjgLc1Calc.hh
        src/include/euclid/PjgLc2Calc.hh
        src/include/euclid/PjgMath.hh
        src/include/euclid/PjgMercatorCalc.hh
        src/include/euclid/PjgMercatorMath.hh
        src/include/euclid/PjgObliqueStereoCalc.hh
        src/include/euclid/PjgObliqueStereoMath.hh
        src/include/euclid/PjgPolarRadarCalc.hh
        src/include/euclid/PjgPolarRadarMath.hh
        src/include/euclid/PjgPolarStereoCalc.hh
        src/include/euclid/PjgPolarStereoMath.hh
        src/include/euclid/PjgTransMercatorMath.hh
        src/include/euclid/PjgTypes.hh
        src/include/euclid/PjgVertPerspMath.hh
        src/include/euclid/point.h
        src/include/euclid/Point.hh
        src/include/euclid/PointList.hh
        src/include/euclid/Polyline.hh
        src/include/euclid/Projection.hh
        src/include/euclid/ProjFlat.hh
        src/include/euclid/ProjLatlon.hh
        src/include/euclid/ProjRUC2Lambert.hh
        src/include/euclid/ProjType.hh
        src/include/euclid/RectangularTemplate.hh
        src/include/euclid/Rotate3d.hh
        src/include/euclid/scan.h
        src/include/euclid/search.h
        src/include/euclid/SimpleGrid.hh
        src/include/euclid/sincos.h
        src/include/euclid/SunAngle.hh
        src/include/euclid/SunPosn.hh
        src/include/euclid/TypeGrid.hh
        src/include/euclid/WorldPoint2D.hh
        src/include/euclid/WorldPolygon2D.hh
        src/affine/Rotate3d.cc
        src/alloc/alloc.c
        src/Attributes/AttributesEuclid.cc
        src/Attributes/DataAtt.cc
        src/Attributes/EndPts.cc
        src/Attributes/Handedness.cc
        src/Attributes/MotionVector.cc
        src/boundary/adj_star.c
        src/boundary/alloc_nodes.c
        src/boundary/bbox.c
        src/boundary/bdry_graph.c
        src/boundary/boundary_intervals.c
        src/boundary/fill_boundary.c
        src/boundary/find_extreme_pts.c
        src/boundary/free_clump_info.c
        src/boundary/gen_bdry.c
        src/boundary/init_ray.c
        src/boundary/make_star.c
        src/boundary/obdry_graph.c
        src/boundary/oboundary_intervals.c
        src/boundary/ogen_bdry.c
        src/boundary/otraverse_bdry_graph.c
        src/boundary/translate_bdry.c
        src/boundary/traverse_bdry_graph.c
        src/clump/adjust_intervals.c
        src/clump/alloc_clumps.c
        src/clump/alloc_rowh.c
        src/clump/clump_grid.c
        src/clump/clump_intervals.c
        src/clump/clump_volume.c
        src/clump/erode_clump.c
        src/clump/euclid_dist.c
        src/clump/extend_clump.c
        src/clump/extend_intervals.c
        src/clump/find_intervals.c
        src/clump/find_intervals_float.c
        src/clump/find_overlap.c
        src/clump/free_interval.c
        src/clump/get_intervals.c
        src/clump/get_intervals_float.c
        src/clump/intervals_to_array.c
        src/clump/link_intervals.c
        src/clump/oclump_intervals.c
        src/clump/ofree_clump_info.c
        src/clump/oprint_intervals.c
        src/clump/overlap.c
        src/clump/overlap_plane.c
        src/clump/overlap_rows.c
        src/clump/overlap_volume.c
        src/clump/print_intervals.c
        src/clump/reset_arrays.c
        src/clump/reset_clump_id.c
        src/clump/row_hdr.c
        src/clump/scan_interval.c
        src/clump/set_intervals.c
        src/clump/set_rp.c
        src/clump/small_clumps.c
        src/clump/sort_intervals.c
        src/clump/split_clump.c
        src/clump/stack_interval.c
        src/clump/transform_intervals.c
        src/clump/translate_array.c
        src/clump/translate_clump.c
        src/clump/translate_intervals.c
        src/clump/union_intervals.c
        src/clump/zero_clump.c
        src/geometry/convex_hull.c
        src/geometry/coord_system.c
        src/geometry/create_box.c
        src/geometry/create_trapezoid.c
        src/geometry/equidistant_pts.c
        src/geometry/fill_polygon.c
        src/geometry/get_perpendicular.c
        src/geometry/half_plane.c
        src/geometry/hypot.c
        src/geometry/inside_poly.c
        src/geometry/is_rectangle.c
        src/geometry/lat_long.c
        src/geometry/line_intersect.c
        src/geometry/line_point.c
        src/geometry/line_through_ellipse.c
        src/geometry/linear_comb.c
        src/geometry/perp_projection.c
        src/geometry/point_in_ellipse.c
        src/geometry/point_in_polygon.c
        src/geometry/point_on_segment.c
        src/geometry/polygon_area.c
        src/geometry/polygon_centroid.c
        src/geometry/polygon_intersect.c
        src/geometry/random_bdry.c
        src/geometry/segment_intersect.c
        src/geometry/sincos.c
        src/geometry/unit_vector.c
        src/geometry/vect_add.c
        src/Grid/Grid.cc
        src/Grid/GridGeom.cc
        src/Grid2d/Box.cc
        src/Grid2d/Grid2d.cc
        src/Grid2d/Grid2dClump.cc
        src/Grid2d/Grid2dDistToNonMissing.cc
        src/Grid2d/Grid2dEdgeBuilder.cc
        src/Grid2d/Grid2dInside.cc
        src/Grid2d/Grid2dLoop.cc
        src/Grid2d/Grid2dLoopA.cc
        src/Grid2d/Grid2dLoopAlg.cc
        src/Grid2d/Grid2dMedian.cc
        src/Grid2d/Grid2dOffset.cc
        src/Grid2d/Grid2dPolyFinder.cc
        src/Grid2d/GridAlgs.cc
        src/Grid2d/GridExpand.cc
        src/Grid2d/GridExpandX.cc
        src/GridTemplate/CenteredRectangularTemplate.cc
        src/GridTemplate/CircularTemplate.cc
        src/GridTemplate/CircularTemplateList.cc
        src/GridTemplate/EllipticalTemplate.cc
        src/GridTemplate/GlobalCircularTemplate.cc
        src/GridTemplate/GlobalGridTemplate.cc
        src/GridTemplate/GridOffset.cc
        src/GridTemplate/GridPoint.cc
        src/GridTemplate/GridTemplate.cc
        src/GridTemplate/GridTemplateList.cc
        src/GridTemplate/RectangularTemplate.cc
        src/link/link.c
        src/Pjg/Pjg.cc
        src/Pjg/PjgAlbersMath.cc
        src/Pjg/PjgAzimEquidistMath.cc
        src/Pjg/PjgCalc.cc
        src/Pjg/PjgFlatCalc.cc
        src/Pjg/PjgGrib.cc
        src/Pjg/PjgLambertAzimMath.cc
        src/Pjg/PjgLambertConfMath.cc
        src/Pjg/PjgLatlonCalc.cc
        src/Pjg/PjgLatlonMath.cc
        src/Pjg/PjgLc1Calc.cc
        src/Pjg/PjgLc2Calc.cc
        src/Pjg/PjgMath.cc
        src/Pjg/PjgMercatorCalc.cc
        src/Pjg/PjgMercatorMath.cc
        src/Pjg/PjgObliqueStereoCalc.cc
        src/Pjg/PjgObliqueStereoMath.cc
        src/Pjg/PjgPolarRadarCalc.cc
        src/Pjg/PjgPolarRadarMath.cc
        src/Pjg/PjgPolarStereoCalc.cc
        src/Pjg/PjgPolarStereoMath.cc
        src/Pjg/PjgTransMercatorMath.cc
        src/Pjg/PjgVertPerspMath.cc
        src/Pjg/TEST_pjg_math.cc
        src/Point/DistPoint.cc
        src/Point/IndexPoint.cc
        src/Point/Point.cc
        src/Point/PointList.cc
        src/Polygon_simplify/DPbasic.cc
        src/Polygon_simplify/DPbasic_main.cc
        src/Polyline/ConvexHull.cc
        src/Polyline/Line.cc
        src/Polyline/LineList.cc
        src/Polyline/Polyline.cc
        src/Projection/Projection.cc
        src/Projection/ProjFlat.cc
        src/Projection/ProjRUC2Lambert.cc
        src/search/search_line_through_ellipse.c
        src/search/search_point_in_ellipse.c
        src/search/search_point_in_polygon.c
        src/SunPosn/novas.c
        src/SunPosn/novas.h
        src/SunPosn/novascon.c
        src/SunPosn/novascon.h
        src/SunPosn/readeph0.c
        src/SunPosn/rsts_sun_pos.c
        src/SunPosn/rsts_sun_pos.h
        src/SunPosn/solarsystem.h
        src/SunPosn/solsys3.c
        src/SunPosn/SunAngle.cc
        src/SunPosn/SunPosn.cc
        src/test_edm/test_edm.c
        src/WorldPoint/WorldPoint2D.cc
        src/WorldPoint/WorldPolygon2D.cc
)
add_library(euclid ${SOURCE_FILES})
target_include_directories(euclid PUBLIC
        ./src/include
        ${CMAKE_SOURCE_DIR}/libs/dataport/src/include
        ${CMAKE_SOURCE_DIR}/libs/toolsa/src/include
        ${CMAKE_SOURCE_DIR}/libs/rapmath/src/include
)