set(SOURCE_FILES
        src/grib2/BMS.cc
        src/grib2/DataRepTemp.cc
        src/grib2/DataTemp.cc
        src/grib2/DRS.cc
        src/grib2/DS.cc
        src/grib2/ES.cc
        src/grib2/GausLatLonProj.cc
        src/grib2/GDS.cc
        src/grib2/Grib2File.cc
        src/grib2/Grib2Record.cc
        src/grib2/GribProj.cc
        src/grib2/GribSection.cc
        src/grib2/IdSec.cc
        src/grib2/IndicatorSec.cc
        src/grib2/LambertConfProj.cc
        src/grib2/LatLonProj.cc
        src/grib2/LocalUseSec.cc
        src/grib2/MercatorProj.cc
        src/grib2/PDS.cc
        src/grib2/PolarStereoProj.cc
        src/grib2/ProdDefTemp.cc
        src/grib2/RotLatLonProj.cc
        src/grib2/RotLatLonProjArakawaNonE.cc
        src/grib2/SpaceViewProj.cc
        src/grib2/Template4.0.cc
        src/grib2/Template4.1.cc
        src/grib2/Template4.10.cc
        src/grib2/Template4.11.cc
        src/grib2/Template4.12.cc
        src/grib2/Template4.15.cc
        src/grib2/Template4.2.cc
        src/grib2/Template4.30.cc
        src/grib2/Template4.5.cc
        src/grib2/Template4.6.cc
        src/grib2/Template4.7.cc
        src/grib2/Template4.8.cc
        src/grib2/Template4.9.cc
        src/grib2/Template5.0.cc
        src/grib2/Template5.2.cc
        src/grib2/Template5.3.cc
        src/grib2/Template5.4000.cc
        src/grib2/Template5.41.cc
        src/grib2/Template7.0.cc
        src/grib2/Template7.2.cc
        src/grib2/Template7.4000.cc
        src/grib2/Template7.41.cc
        src/include/grib2/BMS.hh
        src/include/grib2/constants.h
        src/include/grib2/DataRepTemp.hh
        src/include/grib2/DataTemp.hh
        src/include/grib2/DRS.hh
        src/include/grib2/DS.hh
        src/include/grib2/ES.hh
        src/include/grib2/GausLatLonProj.hh
        src/include/grib2/GDS.hh
        src/include/grib2/Grib2File.hh
        src/include/grib2/Grib2Record.hh
        src/include/grib2/GribProj.hh
        src/include/grib2/GribSection.hh
        src/include/grib2/IdSec.hh
        src/include/grib2/IndicatorSec.hh
        src/include/grib2/LambertConfProj.hh
        src/include/grib2/LatLonProj.hh
        src/include/grib2/LocalUseSec.hh
        src/include/grib2/MercatorProj.hh
        src/include/grib2/PDS.hh
        src/include/grib2/PolarStereoProj.hh
        src/include/grib2/ProdDefTemp.hh
        src/include/grib2/RotLatLonProj.hh
        src/include/grib2/RotLatLonProjArakawaNonE.hh
        src/include/grib2/SpaceViewProj.hh
        src/include/grib2/Template4.0.hh
        src/include/grib2/Template4.1.hh
        src/include/grib2/Template4.10.hh
        src/include/grib2/Template4.11.hh
        src/include/grib2/Template4.12.hh
        src/include/grib2/Template4.15.hh
        src/include/grib2/Template4.2.hh
        src/include/grib2/Template4.30.hh
        src/include/grib2/Template4.5.hh
        src/include/grib2/Template4.6.hh
        src/include/grib2/Template4.7.hh
        src/include/grib2/Template4.8.hh
        src/include/grib2/Template4.9.hh
        src/include/grib2/Template5.0.hh
        src/include/grib2/Template5.2.hh
        src/include/grib2/Template5.3.hh
        src/include/grib2/Template5.4000.hh
        src/include/grib2/Template5.41.hh
        src/include/grib2/Template7.0.hh
        src/include/grib2/Template7.2.hh
        src/include/grib2/Template7.4000.hh
        src/include/grib2/Template7.41.hh
)
add_library(grib2 ${SOURCE_FILES})