set(SOURCE_FILES
        src/include/rapformats/ac_data.h
        src/include/rapformats/ac_georef.hh
        src/include/rapformats/ac_posn.h
        src/include/rapformats/ac_route.h
        src/include/rapformats/acars.h
        src/include/rapformats/acarsXml.hh
        src/include/rapformats/acPosVector.hh
        src/include/rapformats/alenia.h
        src/include/rapformats/Amdar.hh
        src/include/rapformats/ascii_shapeio.h
        src/include/rapformats/bdry.h
        src/include/rapformats/Bdry.hh
        src/include/rapformats/bdry_extrap.h
        src/include/rapformats/bdry_typedefs.h
        src/include/rapformats/BdryPoint.hh
        src/include/rapformats/BdryPointShearInfo.hh
        src/include/rapformats/BdryPolyline.hh
        src/include/rapformats/bprp.h
        src/include/rapformats/CapeCinSounding.hh
        src/include/rapformats/ccm_file.h
        src/include/rapformats/cedric.h
        src/include/rapformats/Cedric.hh
        src/include/rapformats/ChecktimeReport.hh
        src/include/rapformats/chill.h
        src/include/rapformats/clutter_table.h
        src/include/rapformats/ComboPt.hh
        src/include/rapformats/coord_export.h
        src/include/rapformats/dobson.h
        src/include/rapformats/ds_radar.h
        src/include/rapformats/ds_radar_calib.h
        src/include/rapformats/ds_radar_ts.h
        src/include/rapformats/DsBeamData.hh
        src/include/rapformats/DsBeamDataFieldParms.hh
        src/include/rapformats/DsFieldParams.hh
        src/include/rapformats/DsPlatformGeoref.hh
        src/include/rapformats/DsRadarAz.hh
        src/include/rapformats/DsRadarBeam.hh
        src/include/rapformats/DsRadarCalib.hh
        src/include/rapformats/DsRadarElev.hh
        src/include/rapformats/DsRadarFlags.hh
        src/include/rapformats/DsRadarMsg.hh
        src/include/rapformats/DsRadarParams.hh
        src/include/rapformats/DsRadarPower.hh
        src/include/rapformats/DsRadarSweep.hh
        src/include/rapformats/Edr.hh
        src/include/rapformats/Edr_expanded.hh
        src/include/rapformats/FieldThresh.hh
        src/include/rapformats/FieldThresh2.hh
        src/include/rapformats/FieldThresh2WithGrid.hh
        src/include/rapformats/flt_path.h
        src/include/rapformats/fos.h
        src/include/rapformats/gailtg.h
        src/include/rapformats/GaiLtgFile.hh
        src/include/rapformats/gate_data.h
        src/include/rapformats/GenPoly.hh
        src/include/rapformats/GenPolyStats.hh
        src/include/rapformats/GenPt.hh
        src/include/rapformats/GenPtArray.hh
        src/include/rapformats/gint_user.h
        src/include/rapformats/GldnLtgFile.hh
        src/include/rapformats/hist_fore.h
        src/include/rapformats/HydroStation.hh
        src/include/rapformats/iidabin.h
        src/include/rapformats/kav_grid.h
        src/include/rapformats/kavltg.h
        src/include/rapformats/KavLtgFile.hh
        src/include/rapformats/KavMosaic.hh
        src/include/rapformats/kavouras_data.h
        src/include/rapformats/kavouras_io.h
        src/include/rapformats/km.h
        src/include/rapformats/lass.h
        src/include/rapformats/lincoln.h
        src/include/rapformats/ltg.h
        src/include/rapformats/LtgGroup.hh
        src/include/rapformats/LtgWrapper.hh
        src/include/rapformats/Map.hh
        src/include/rapformats/MapIcon.hh
        src/include/rapformats/MapIconDef.hh
        src/include/rapformats/MapIconPoint.hh
        src/include/rapformats/MapObject.hh
        src/include/rapformats/MapPoint.hh
        src/include/rapformats/MapPointOffset.hh
        src/include/rapformats/MapPolyline.hh
        src/include/rapformats/MapSimpleLabel.hh
        src/include/rapformats/mcars.h
        src/include/rapformats/mcidas_area.h
        src/include/rapformats/mdvt_data.h
        src/include/rapformats/mdvt_user.h
        src/include/rapformats/metar.h
        src/include/rapformats/metar_decode.h
        src/include/rapformats/MitLtg.hh
        src/include/rapformats/mitre.h
        src/include/rapformats/moments.h
        src/include/rapformats/MultBuf.hh
        src/include/rapformats/MultBufPart.hh
        src/include/rapformats/MultiThresh.hh
        src/include/rapformats/MultiThreshFcstBiasMapping.hh
        src/include/rapformats/MultiThreshItem.hh
        src/include/rapformats/MultiThresholdsBiasMapping.hh
        src/include/rapformats/nexrad.h
        src/include/rapformats/nexrad_com_hdrs.h
        src/include/rapformats/nids_file.h
        src/include/rapformats/nids_sat.h
        src/include/rapformats/nws_oso_local.h
        src/include/rapformats/NWS_WWA.hh
        src/include/rapformats/pirep.h
        src/include/rapformats/Pirep.hh
        src/include/rapformats/pirepXml.hh
        src/include/rapformats/polar2mdv_lookup.h
        src/include/rapformats/prims.h
        src/include/rapformats/r_data.h
        src/include/rapformats/radar_scan_table.h
        src/include/rapformats/RadarSpectra.hh
        src/include/rapformats/rData.hh
        src/include/rapformats/ridds.h
        src/include/rapformats/rp7.h
        src/include/rapformats/rvp8_ts_api.h
        src/include/rapformats/SigAirMet.hh
        src/include/rapformats/Sndg.hh
        src/include/rapformats/sounding_chunk.h
        src/include/rapformats/SsiFile.h
        src/include/rapformats/station_file.h
        src/include/rapformats/station_reports.h
        src/include/rapformats/StationData.h
        src/include/rapformats/swap.h
        src/include/rapformats/Taf.hh
        src/include/rapformats/TaiwanAwos.hh
        src/include/rapformats/tdwr_prims.h
        src/include/rapformats/TiledMultiThresh.hh
        src/include/rapformats/TileInfo.hh
        src/include/rapformats/TileLatLon.hh
        src/include/rapformats/TileRange.hh
        src/include/rapformats/titan_grid.h
        src/include/rapformats/trec_gauge.h
        src/include/rapformats/tstorm_hull_smooth.h
        src/include/rapformats/tstorm_spdb.h
        src/include/rapformats/twnltg.h
        src/include/rapformats/uf_headers.h
        src/include/rapformats/UfRadar.hh
        src/include/rapformats/UfRecord.hh
        src/include/rapformats/UsgsData.hh
        src/include/rapformats/v_data.h
        src/include/rapformats/var_elev.h
        src/include/rapformats/VerGridRegion.hh
        src/include/rapformats/Windshear.hh
        src/include/rapformats/WindshearAlpha.hh
        src/include/rapformats/WindshearAlphas.hh
        src/include/rapformats/WindshearArena.hh
        src/include/rapformats/WinsRadar.hh
        src/include/rapformats/WxObs.hh
        src/include/rapformats/WxObsField.hh
        src/include/rapformats/WxTypeField.hh
        src/include/rapformats/zr.h
        src/include/rapformats/zrpf.h
        src/include/rapformats/ZVis.hh
        src/include/rapformats/ZvisCal.hh
        src/include/rapformats/ZvisFcast.hh
        src/ac_data/ac_data.c
        src/ac_posn/ac_georef.cc
        src/ac_posn/ac_posn.c
        src/ac_posn/acPosVector.cc
        src/ac_route/ac_route.c
        src/acars/acars.c
        src/acars/acarsXml.cc
        src/acars/Amdar.cc
        src/ascii_shapeio/shapeio.cc
        src/ascii_shapeio/shapeio_int.h
        src/ascii_shapeio/sio_index_file.cc
        src/ascii_shapeio/sio_util.cc
        src/ascii_shapeio/type_subtype_list.cc
        src/bdry/Bdry.cc
        src/bdry/bdry_c.c
        src/bdry/bdry_extrap.c
        src/bdry/BdryPoint.cc
        src/bdry/BdryPointShearInfo.cc
        src/bdry/BdryPolyline.cc
        src/ccm/ccm_io_lib.c
        src/cedric/Cedric.cc
        src/checktimes/ChecktimeReport.cc
        src/DsRadar/ds_radar.c
        src/DsRadar/ds_radar_calib.c
        src/DsRadar/ds_radar_ts.c
        src/DsRadar/DsBeamData.cc
        src/DsRadar/DsBeamDataFieldParms.cc
        src/DsRadar/DsFieldParams.cc
        src/DsRadar/DsPlatformGeoref.cc
        src/DsRadar/DsRadarAz.cc
        src/DsRadar/DsRadarBeam.cc
        src/DsRadar/DsRadarCalib.cc
        src/DsRadar/DsRadarElev.cc
        src/DsRadar/DsRadarFlags.cc
        src/DsRadar/DsRadarMsg.cc
        src/DsRadar/DsRadarParams.cc
        src/DsRadar/DsRadarPower.cc
        src/DsRadar/DsRadarSweep.cc
        src/Edr/Edr.cc
        src/Edr/Edr_expanded.cc
        src/flt_path/flt_path.c
        src/fos/sigmet.c
        src/fos/wxadv.c
        src/GenPoly/GenPoly.cc
        src/GenPoly/GenPolyStats.cc
        src/GenPt/ComboPt.cc
        src/GenPt/GenPt.cc
        src/GenPt/GenPtArray.cc
        src/gint/gint_user.c
        src/hist_fore/hist_fore.c
        src/iidabin/iidabin.cc
        src/kavouras/dcmp6h.c
        src/kavouras/dcmp6l.c
        src/kavouras/kavouras_io.c
        src/km/decode_header.c
        src/km/fix_header_time.c
        src/km/KavMosaic.cc
        src/km/set_header_time.c
        src/km/unpack_raw.c
        src/ltg/gailtg.c
        src/ltg/GaiLtgFile.cc
        src/ltg/GldnLtgFile.cc
        src/ltg/kavltg.c
        src/ltg/KavLtgFile.cc
        src/ltg/ltg.c
        src/ltg/LtgGroup.cc
        src/ltg/LtgWrapper.cc
        src/ltg/MitLtg.cc
        src/ltg/twnltg.c
        src/Maps/Map.cc
        src/Maps/MapIcon.cc
        src/Maps/MapIconDef.cc
        src/Maps/MapIconPoint.cc
        src/Maps/MapObject.cc
        src/Maps/MapPoint.cc
        src/Maps/MapPointOffset.cc
        src/Maps/MapPolyline.cc
        src/Maps/MapSimpleLabel.cc
        src/mcidas/area.c
        src/mdvt/mdvt_user.c
        src/metar/antoi.c
        src/metar/dcdmetar.c
        src/metar/dcdmtrmk.c
        src/metar/fracpart.c
        src/metar/metar_private.h
        src/metar/stspack2.c
        src/mitre/mitre.c
        src/MultBuf/MultBuf.cc
        src/MultBuf/MultBufPart.cc
        src/nids/nids_file.c
        src/nws_wwa/NWS_WWA.cc
        src/Pirep/Pirep.cc
        src/Pirep/pirep_c.c
        src/Pirep/pirepXml.cc
        src/r_data/rData.cc
        src/radar/clutter_table.c
        src/radar/polar2mdv_lookup.c
        src/radar/radar_scan_table.c
        src/radar/RadarSpectra.cc
        src/radar/UfRadar.cc
        src/radar/UfRecord.cc
        src/SigAirMet/SigAirMet.cc
        src/Sndg/CapeCinSounding.cc
        src/Sndg/Sndg.cc
        src/sounding/sounding_chunk.c
        src/station_data/decoded_metar_to_report.c
        src/station_data/HydroStation.cc
        src/station_data/print_metar_data.c
        src/station_data/SsiFile.cc
        src/station_data/station_file.cc
        src/station_data/station_reports.c
        src/station_data/StationData.cc
        src/station_data/TaiwanAwos.cc
        src/station_data/WxObs.cc
        src/station_data/WxObsField.cc
        src/station_data/WxTypeField.cc
        src/swap/swap_lincoln.c
        src/swap/swap_ridds.c
        src/swap/swap_rp7.c
        src/taf/Taf.cc
        src/ThreshMap/FieldThresh.cc
        src/ThreshMap/FieldThresh2.cc
        src/ThreshMap/FieldThresh2WithGrid.cc
        src/ThreshMap/MultiThresh.cc
        src/ThreshMap/MultiThreshFcstBiasMapping.cc
        src/ThreshMap/MultiThreshItem.cc
        src/ThreshMap/MultiThresholdsBiasMapping.cc
        src/ThreshMap/TiledMultiThresh.cc
        src/ThreshMap/TileInfo.cc
        src/ThreshMap/TileLatLon.cc
        src/titan/titan_grid.c
        src/titan/tstorm_hull_smooth.c
        src/titan/tstorm_spdb.c
        src/trec_gauge/trec_gauge.c
        src/Usgs/UsgsData.cc
        src/var_elev/var_elev.c
        src/VerGrid/VerGridRegion.cc
        src/Windshear/Windshear.cc
        src/Windshear/WindshearAlpha.cc
        src/Windshear/WindshearAlphas.cc
        src/Windshear/WindshearArena.cc
        src/WinsRadar/WinsRadar.cc
        src/zr/zr.c
        src/zr/zrpf.c
        src/zr/ZVis.cc
        src/zr/ZvisCal.cc
        src/zr/ZvisFcast.cc
)
add_library(rapformats ${SOURCE_FILES})
target_include_directories(rapformats PUBLIC
        ./src/include
        ${CMAKE_SOURCE_DIR}/libs/toolsa/src/include
        ${CMAKE_SOURCE_DIR}/libs/dataport/src/include
        ${CMAKE_SOURCE_DIR}/libs/euclid/src/include
        ${CMAKE_SOURCE_DIR}/libs/didss/src/include
        ${CMAKE_SOURCE_DIR}/libs/rapmath/src/include
        ${CMAKE_SOURCE_DIR}/libs/physics/src/include
)