set(SOURCE_FILES
        src/include/rapmath/AngleCombiner.hh
        src/include/rapmath/AssignmentNode.hh
        src/include/rapmath/bd_tree.h
        src/include/rapmath/BinaryArgs.hh
        src/include/rapmath/BinaryNode.hh
        src/include/rapmath/DistLognorm.hh
        src/include/rapmath/DistNormal.hh
        src/include/rapmath/DistPolynomial.hh
        src/include/rapmath/Distribution.hh
        src/include/rapmath/Find.hh
        src/include/rapmath/FloatUserData.hh
        src/include/rapmath/FunctionDef.hh
        src/include/rapmath/Fuzzy2d.hh
        src/include/rapmath/FuzzyF.hh
        src/include/rapmath/FuzzyFunction.hh
        src/include/rapmath/LagrangePtFunc.hh
        src/include/rapmath/LeafContent.hh
        src/include/rapmath/LeafNode.hh
        src/include/rapmath/LinearPtFunc.hh
        src/include/rapmath/LogicalArgs.hh
        src/include/rapmath/LogicalNode.hh
        src/include/rapmath/Math.hh
        src/include/rapmath/math_macros.h
        src/include/rapmath/MathData.hh
        src/include/rapmath/MathDataSimple.hh
        src/include/rapmath/MathDataVirtualMethods.hh
        src/include/rapmath/MathFindSimple.hh
        src/include/rapmath/MathLoopData.hh
        src/include/rapmath/MathLoopDataVirtualMethods.hh
        src/include/rapmath/MathParser.hh
        src/include/rapmath/MathUserData.hh
        src/include/rapmath/MathUserDataVirtualMethods.hh
        src/include/rapmath/NewtonPtFunc.hh
        src/include/rapmath/Node.hh
        src/include/rapmath/NodeVirtualMethods.hh
        src/include/rapmath/OrderedList.hh
        src/include/rapmath/ParamsFuzzyFunction.hh
        src/include/rapmath/PolyFit.hh
        src/include/rapmath/ProcessingNode.hh
        src/include/rapmath/PtFunction.hh
        src/include/rapmath/PtFuzzyFunc.hh
        src/include/rapmath/RapComplex.hh
        src/include/rapmath/RMmalloc.h
        src/include/rapmath/round.h
        src/include/rapmath/ScaleFuzzyFunc.hh
        src/include/rapmath/SFuzzyF.hh
        src/include/rapmath/SpecialUserData.hh
        src/include/rapmath/stats.h
        src/include/rapmath/StatusUserData.hh
        src/include/rapmath/StepPtFunc.hh
        src/include/rapmath/TrapFuzzyF.hh
        src/include/rapmath/trig.h
        src/include/rapmath/umath.h
        src/include/rapmath/UnaryNode.hh
        src/include/rapmath/usort.h
        src/include/rapmath/usort_stl.h
        src/include/rapmath/usvd.h
        src/include/rapmath/VolumeData.hh
        src/include/rapmath/VolumeDataVirtualMethods.hh
        src/angles/AngleCombiner.cc
        src/complex/RapComplex.cc
        src/functions/Fuzzy2d.cc
        src/functions/FuzzyF.cc
        src/functions/FuzzyFunction.cc
        src/functions/LagrangePtFunc.cc
        src/functions/LinearPtFunc.cc
        src/functions/NewtonPtFunc.cc
        src/functions/ParamsFuzzyFunction.cc
        src/functions/ParamsFuzzyFunction.hh
        src/functions/PtFunction.cc
        src/functions/PtFuzzyFunc.cc
        src/functions/ScaleFuzzyFunc.cc
        src/functions/SFuzzyF.cc
        src/functions/StepPtFunc.cc
        src/functions/TrapFuzzyF.cc
        src/lists/OrderedList.cc
        src/malloc/RMmalloc.c
        src/mathparse/AssignmentNode.cc
        src/mathparse/BinaryArgs.cc
        src/mathparse/BinaryNode.cc
        src/mathparse/Find.cc
        src/mathparse/FloatUserData.cc
        src/mathparse/LeafContent.cc
        src/mathparse/LeafNode.cc
        src/mathparse/LogicalArgs.cc
        src/mathparse/LogicalNode.cc
        src/mathparse/MathData.cc
        src/mathparse/MathDataSimple.cc
        src/mathparse/MathFindSimple.cc
        src/mathparse/MathParser.cc
        src/mathparse/ProcessingNode.cc
        src/mathparse/SpecialUserData.cc
        src/mathparse/StatusUserData.cc
        src/mathparse/UnaryNode.cc
        src/misc/Math.cc
        src/round/nint.c
        src/stats/beta.c
        src/stats/DistLognorm.cc
        src/stats/DistNormal.cc
        src/stats/DistPolynomial.cc
        src/stats/Distribution.cc
        src/stats/exponential.c
        src/stats/gamma.c
        src/stats/normal.c
        src/stats/primes.c
        src/stats/uniform.c
        src/stats/weibull.c
        src/tree/bd_tree.c
        src/trig/trig.c
        src/umath/dir_speed_2_uv.c
        src/umath/PolyFit.cc
        src/umath/test_usvd.c
        src/umath/uCurveFit.cc
        src/umath/uintersect.c
        src/umath/uLatLon.c
        src/umath/uline_through_ellipse.c
        src/umath/ulong_scale.c
        src/umath/umax_wt_bip.c
        src/umath/uNewtRaph.cc
        src/umath/uPct.cc
        src/umath/upoint_in_ellipse.c
        src/umath/upoint_in_polygon.c
        src/umath/usign.c
        src/umath/usort.c
        src/umath/usort_stl.cc
        src/umath/ustat.c
        src/umath/usvd.c
        src/umath/uTest.cc
        src/umath/uv_2_dir_speed.c
)
add_library(rapmath ${SOURCE_FILES})
target_include_directories(rapmath PUBLIC
        ./src/include
        ${CMAKE_SOURCE_DIR}/libs/toolsa/src/include
        ${CMAKE_SOURCE_DIR}/libs/tdrp/src/include
        ${CMAKE_SOURCE_DIR}/libs/dataport/src/include
)